習題區save-to-note功能完成

--- a/apps/exercise_area/static/css/exercise_style.css
+++ b/apps/exercise_area/static/css/exercise_style.css
@@ -221,3 +221,21 @@ th, td {
     border-radius: 5px;
     white-space: nowrap;
 }
+
+/* save-to-note的hover效果 */
+.save-to-note {
+    position: relative;
+    cursor: pointer;
+}
+
+.save-to-note:hover::after {
+    content: "儲存至筆記區";
+    position: absolute;
+    top: -20px; /* Adjust this value to position the text */
+    left: calc(100% + 3px);
+    background-color: rgba(0, 0, 0, 0.7);
+    color: white;
+    padding: 5px;
+    border-radius: 5px;
+    white-space: nowrap;
+}
